ingress-amg-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-test
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: '*.elb.us-west-2.amazonaws.com'
      http:
        paths:
          - path: /keycloak
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
